@@ -2034,6 +2034,17 @@ evaluated and then stashed in @var{place}.  If @var{place}'s value is
 non-@code{nil}, return that value instead of evaluating @var{code}.
 @end defmac
 
+@c based on lisp/subr.el
+@defmac with-narrowing start end [:locked tag] &rest body
+Execute @var{body} with restrictions set to @var{start} and @var{end}.
+The current restrictions, if any, are restored upon return.  With the
+optional :locked @var{tag} argument, inside @var{tag},
+@code{narrow-to-region} and @code{widen} can be used only within the
+@var{start} and @var{end} limits, unless the restrictions are unlocked
+by calling @code{narrowing-unlock} with @var{tag}.  See
+@code{narrowing-lock} for a more detailed description.
+@end defmac
+
 @c copied from lispref/positions.texi
 @defun pos-bol &optional count
 Like @code{line-beginning-position}, but ignores fields (and is more
